# DTAI

./: .gitattributes  README.md
src/: README.md  pyproject.toml
src/CFD/: 0_데이터세트생성.ipynb  99_데이터베이스.ipynb
src/POC/: poc.py
src/POC/configs/: config.py  position_info.json
src/POC/data/: FDO.json  air_quality_data.csv  merged_df.csv  metadata.json  position_data.csv  test_data.json  weather.csv  제주특별자치도 서귀포시.txt  제주특별자치도 제주시.txt
src/POC/model/: model.py
src/POC/notebooks/: 0 check_dataset.ipynb  1 collect_dataset_from_db.ipynb  2 make_sample_data.ipynb  3 analysis.ipynb  3 train.ipynb  4 test.ipynb  5 classify.ipynb  6 mapping_with_spot.ipynb  test.ipynb
src/POC/result/prediction/: 2024-10-21 18:03:44_sample.json
src/POC/result/testweights/pm10/: best_model_weights.pth  best_model_weights2.pth
src/POC/result/weights/pm10/: best_model_weights.pth
src/POC/result/weights/pm25/: best_model_weights.pth
src/POC/utils/: util.py
